
(2021/11/1)
AlienRace.BackstoryDef
  Anty_Amigo_B_Rangedinfantry_Drop .title .titleShort .baseDescription

(2021/11/12)
String/Name/Anty/First
 After Weed

(2022/01/11)
ThingDef
  AT_Proty_spawner .label .description
  AT_Proty_spaBulletProtyspawnerwner .label
  AT_Proty_spawner_Tunnel .label .description
  AT_Proty_spawner_Tunnel_Open .label .description

(2022/01/19)
AlienRace.ThingDef_AlienRace
  AT_dreadnought .description

ThingDef
  AntyTransitionRefleum_Thing .label .description
  AT_ChargeBomb_Ready_Proty .label
  AT_SuicideBomb_Ready_Proty .label

HediffDef
  AT_Dreadnought_Reborn .label .description
  AT_Dreadnought_Reborn_High .label .description
  AntyDreadnoughtbirth .comps.0.discoverLetterLabel .comps.0.discoverLetterText
  Antypheromone_ShootingReady .label
  AntyLarva_p .description

RecipeDef
  AT_Dreadnought_metamorphosis .label .description .jobString

ResearchProjectDef
  AT_Dreadnought_metamorphosisSurgery .label .description .discoveredLetterTitle .discoveredLetterText

DamageDef
  AT_SporeBomb .label .deathMessage
  AT_AcidBomb_C .label .deathMessage
  AT_ParaponeraBomb .deathMessage
  AT_ChargeBomb_Proty .label .deathMessage
  AT_SuicideBomb_Proty .label .deathMessage

(2022/1/20)
ResearchProjectDef
  AT_Dreadnought_metamorphosisSurgery .description .discoveredLetterText

(2022/2/2)
'Fix'
"I fixed the typo. Please check not only the example, but also the Def itself. sorry."
Antie -> Anties, Anty, Anty's
ax -> axe
ThingDef
  AT_AP_Helm_A .description
  AT_AP_SH_A .description
  AT_AP_CO_A .description
  AT_AP_CO_B .description

  AntyExoskeleton_Production .description

  Refleum .description

  AT_Halberd .description
  AT_Hammer .description
  AT_AcidCross .description

AlienRace.BackstoryDef
  Anty_Amigo_B_Meleeinfantry .baseDescription
  Anty_Amigo_B_Meleeinfantry_Drop .baseDescription

'Add'
ThingDef
  Antypheromone_Charge .description
  Antypheromone_Suicide .description

AlienRace.ThingDef_AlienRace
  Anty .description
