@@ -3,7 +3,7 @@
 		<ThingDef ParentName="BaseInsect">
 		<defName>Anty_prototype</defName>
 		<label>proty</label>
-		<description>An ancestor of Anties in earlier stage of the project. Unlike the Anties, they are closer to ants than human, which lacks intelligence to recieve delicate commands.</description>
+		<description>An ancestor of Anties in earlier stage of the project. Unlike the Anties, they are closer to ants than human, which lacks intelligence to recieve delicate commands.\n\nBy the time the Anties escaped from the lab, they were drawn to the Hive by pheromones. This wasn't intentional but Anties are liked them, saying they were like a puppy And delicious.\n\nProty's average height are 95cm, human type and ant type are same.</description>
 		<statBases>
 			<MoveSpeed>5.75</MoveSpeed>
 			<ArmorRating_Blunt>0.07</ArmorRating_Blunt>
