@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <Anty_prototype.label>프로티</Anty_prototype.label>
-  <Anty_prototype.description>프로젝트 초기에 만들어졌던 앤티들의 조상입니다. 현재의 앤티들과는 달리 인간보다는 개미에 더 가까우며 그만큼 지능이 떨어져 자세한 지시를 이해할 수 없습니다.</Anty_prototype.description>
+  <Anty_prototype.description>프로젝트 초기에 만들어졌던 앤티들의 조상입니다. 현재의 앤티들과는 달리 인간보다는 개미에 더 가까우며 그만큼 지능이 떨어져 자세한 지시를 이해할 수 없습니다.\n\n앤티들이 실험실을 탈출할 무렵에 페로몬에 이끌려 군체에 합류하게 되었습니다. 앤티들이 의도한 것은 아니었지만 앤티들은 프로티들이 강아지 같고 맛있다며 좋아했습니다.\n\n프로티의 신장은 평균 95cm로 인간형, 개미형 모두 동일합니다.</Anty_prototype.description>
   <Anty_prototype.tools.0.label>큰 턱</Anty_prototype.tools.0.label>
   <Anty_prototype.tools.1.label>머리</Anty_prototype.tools.1.label>
   <EggProty.label>프로티 유정란</EggProty.label>
@@ -150,7 +150,7 @@
   <AT_TP_AMM.description>멀리 떨어진 곳에서도 메카노이드를 감지하면 작동하는 지뢰입니다. 일반적인 방법으로도 작동합니다. \n\n 내부에는 응축된 레드버스트가 저장되어 있어, 메카노이드뿐만 아니라 모든 대상에게 치명적입니다.</AT_TP_AMM.description>
   
   <AntyExoskeleton.label>앤티 외골격</AntyExoskeleton.label>
-  <AntyExoskeleton.description>앤티의 외골격입니다. 단단하지만 감촉 자체는 사람의 피부와 같습니다. 신체에서 떨어지고 장시간이 지나도 외골격의 세포들은 휴면상태로 버틸 수 있습니다.</AntyExoskeleton.description>
+  <AntyExoskeleton.description>앤티의 외골격입니다. 단단하지만 감촉 자체는 사람의 피부와 같습니다. 신체에서 떨어지고 장시간이 지나도 외골격의 세포들은 휴면상태로 버틸 수 있습니다.\n\n외골격은 2중 구조로 이루어져 있는데, 외부는 비자성 금속으로, 내부는 키틴으로 구성되어 있습니다. 그리고 외부의 금속은 사람의 피부와 유사한 얇은 막으로 덮여 있습니다.</AntyExoskeleton.description>
   
   <Refleum.label>리플리움</Refleum.label>
   <Refleum.description>앤티의 외골격을 기반으로 만들어진 금속입니다. 살아있는 금속이라고도 불리며, 만져보면 미약한 고동이 느껴집니다. 특수한 처리과정을 거치지 않고 가공하게 되면 생명체로써의 기능을 잃습니다.</Refleum.description>
